add perfcorder